--- a/.gitignore
+++ b/.gitignore
@@ -12,14 +12,16 @@ dist
 dist-ssr
 *.local
 
+# Environment files
+.env*
+!.env.example
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
 .idea
 .DS_Store
 *.suo
-*.env
-*.env
 *.ntvs*
 *.njsproj
 *.sln
