--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,19 @@
       "source": "/(.*)",
       "destination": "/index.html"
     }
+  ],
+  "env": {
+    "VITE_APP_ID": "@VITE_APP_ID"
+  },
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/node",
+      "config": {
+        "includeFiles": [
+          "dist/**"
+        ]
+      }
+    }
   ]
 }
